Fix ticket wiz on mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10,7 +10,7 @@
 
 .header-banner {
     display: flex;
-    background-color: #fcd253;
+    background-color: #f2efc4;
     align-items: stretch; /* Ensure children stretch to full height */
     padding: 0 0.4em;
 }
@@ -44,7 +44,7 @@
 }
 
 .sub-header {
-    background-color: #f2efc4;
+    background-color:  #ffffe0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: large;
     display: flex;
@@ -127,14 +127,28 @@
     margin-top:2em;
     padding:1em;
     border-radius:1em;
-
 }
 
 #ticket-form {
-    display:flex;
+    display: flex;
     gap: 10px;
+    flex-wrap: wrap; /* Allow items to wrap onto the next line */
 }
 
+@media screen and (max-width: 700px) {
+    #ticket-form {
+        flex-direction: column; /* Stack form elements vertically */
+        gap: 0.5em; /* Adjust gap between elements */
+    }
+
+    #ticket-form input, #ticket-form textarea, #ticket-form button {
+        width: 100%; /* Make inputs and button take full width */
+    }
+    .ticket-wiz{
+        margin-left: .5em;
+        margin-right: .5em;
+    }
+}
 
 .ticket-list {
     flex: 0 0 32%;
@@ -143,6 +157,8 @@
     background-color: lightyellow;
     border: 1px solid #ddd;
     margin-right: 10px;
+    border-radius: 1em;
+    scroll-snap-align: start;
 }
 
 .ticket-list:last-child {
@@ -166,7 +182,7 @@
     }
 }
 
-@media screen and (min-width: 501px) {
+@media screen and (min-width: 701px) {
     .scrollable {
         overflow-x: auto;
         display: flex;
@@ -180,16 +196,16 @@
     }
 }
 
-.ticket-list {
-    scroll-snap-align: start;
-}
-
 .ticket-item {
     list-style-type: none;
-    background-color: lightgray;
+    background-color: rgb(211, 211, 211, 0.5);
     padding-left: 0.7em;
     margin: 0.2em;
     padding-top: 0.01em;
     border-radius: 1em;
     margin-bottom: 0.7em;
+}
+
+.font{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
